/*
 * This file was generated by the Gradle 'init' task.
 */

plugins {
    `java-library`
    `maven-publish`
}

repositories {
    mavenLocal()
    maven {
        url = uri("https://repo.maven.apache.org/maven2/")
    }
}

dependencies {
    api("org.springframework.boot:spring-boot-starter-webflux:3.2.5")
    api("io.projectreactor:reactor-test:3.6.5")
    api("org.springdoc:springdoc-openapi-webflux-core:1.4.3")
    api("org.springdoc:springdoc-openapi-webflux-ui:1.4.3")
    api("software.amazon.awssdk:s3:2.17.195")
    api("software.amazon.awssdk:netty-nio-client:2.17.195")
    api("net.coobird:thumbnailator:0.4.14")
    api("org.bytedeco:javacv-platform:1.5.7")
    api("com.madgag:animated-gif-lib:1.4")
    testImplementation("org.springframework.boot:spring-boot-starter-test:3.2.5")
    testImplementation("junit:junit:4.13.2")
    testImplementation("au.com.dius:pact-jvm-consumer-junit5:4.0.10")
    testImplementation("au.com.dius:pact-jvm-provider-junit5:4.0.10")
    implementation("org.projectlombok:lombok:1.18.20")

}

group = "me.sonam"
version = "1.0-SNAPSHOT"
description = "s3-rest-service"
java.sourceCompatibility = JavaVersion.VERSION_21

publishing {
    publications.create<MavenPublication>("maven") {
        from(components["java"])
    }
}

tasks.withType<JavaCompile>() {
    options.encoding = "UTF-8"
}

tasks.withType<Javadoc>() {
    options.encoding = "UTF-8"
}
